# ptb

./: .gitignore  LICENSE  README.md
.github/workflows/: python-publish.yml
matlab lib/Trial Post-Processing/: FlipCurves.m  PrepareDataAcrossParticipantsFull.m  README.txt  RetrieveMOTData.m  curvePeaks.m  findHeelStrikes.m  findToeOffs.m  flipAverageCurves.m  getStepDisplacements.m  peakXLSXwriter.m
matlab lib/Trial Pre-Processing/: IKSetup.xml  README.txt  Runner.m  changeIKXMLFile.m  changeMuscleAnalysisXMLFile.m  changeMuscleForceDirectionXMLFile.m  prepareTrialFromVicon.m  reZeroFilter.m  readMOT.m
python_lib/math/: integration.py
python_lib/ml/: bayesian.py
python_lib/osim/: osim_model.py
python_lib/ptb/: install.py  requirements.py
python_lib/ptb/archive/: io.py
python_lib/ptb/math/: filters.py  fourier.py
python_lib/ptb/ml/: ml_util.py
python_lib/ptb/osim/: osim_store.py
python_lib/ptb/util/: c3d.py  data.py
python_lib/ptb/util/io/: mesh.py
python_lib/ptb_src/: README.md  buildme.py  install.py  pyproject.toml  requirements.py
python_lib/ptb_src/ptb/: __init__.py  core.py
python_lib/ptb_src/ptb/core/: obj.py
python_lib/ptb_src/ptb/ml/: ml_util.py  tags.py
python_lib/ptb_src/ptb/test/: c3d_test.py  trc_test.py
python_lib/ptb_src/ptb/util/: data.py  gait.py  lang.py
python_lib/ptb_src/ptb/util/gait/: analysis.py  defaults.py  helpers.py  opsim.py
python_lib/ptb_src/ptb/util/general_helpers/: meshlab.py
python_lib/ptb_src/ptb/util/io/: helper.py  mesh.py  opendialog.py
python_lib/ptb_src/ptb/util/io/mocap/: file_formats.py
python_lib/ptb_src/ptb/util/io/mocap/low_lvl/: c3d.py
python_lib/ptb_src/ptb/util/math/: general.py  stat.py  transformation.py
python_lib/ptb_src/ptb/util/osim/: osim_model.py  osim_store.py
python_lib/ptb_src/ptb_alpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_lib/ptb_src/ptb_beta.egg-info/: PKG-INFO  SOURCES.txt
python_lib/ptb_src/ptb_mmg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_lib/util/: data.py  mesh.py  mos.py
resources/: map_plugin_helper.py
wheels/: useful_wheels.txt  yatpkg_ytedy_beta-0.3.26-py3-none-any.whl
(+5 files in other folders)
