[build-system]
# requires = ["setuptools", "setuptools-scm"]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ptb*"]
exclude = ["archive*", "resources*"]

[project]
name = "ptb_beta"
version = "0.3.13"
authors = [
  { name="Ted Yeung, Thorben Pauli, Isabella Murrell, Homayoon Zarshenas", email="tyeu008@aucklanduni.ac.nz"},
]
description = "This is the MMG Repository containing useful tools and development of useful tools for analysing, processing and modelling in python (and matlab)"
readme = "README.md"
requires-python = ">=3.10"
# dependencies = ['pandas', 'scipy<=1.14.1', 'numpy<=1.26.4', 'vtk', 'Pyside6', 'tsfresh']
dependencies = ['pandas', 'scipy', 'numpy', 'vtk', 'Pyside6', 'tsfresh', 'pymeshlab']
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC-BY-NC-SA-4.0"
[project.urls]
"Homepage" = "https://github.com/tedcty/ptb/"

